[package]
name = "indexer-example"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
actix.workspace = true
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
anyhow.workspace = true
clap.workspace = true
openssl-probe.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
near-indexer.workspace = true
near-o11y.workspace = true
